Correct vertical spacing in card headers.

--- a/styles.css
+++ b/styles.css
@@ -258,11 +258,12 @@ h1 {
 
 .next-icon {
   grid-area: 1 / 1 / 3 / 2;
-  width: 50px;
-  height: 50px;
-  filter: invert(1);
   margin-left: 16px;
-  border: solid blue;
+  margin-top: 16px;
+  width: 30px;
+  height: 30px;
+  filter: invert(1);
+  /* border: solid blue; */
 }
 
 .card-top-text {
@@ -270,13 +271,13 @@ h1 {
   display: flex;
   justify-content: flex-end;
   color: white;
-  border: solid yellow;
+  /* border: solid yellow; */
 }
 
 .card-top-number {
-  grid-area: 2 / 2 / 3 / 3;
+  grid-area: 1 / 2 / 2 / 3;
   display: flex;
   justify-content: flex-end;
   color: white;
-  border: solid yellow;
+  /* border: solid yellow; */
 }
